fix: prevent OSIV from persisting embedded image placeholders in db